--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="movie_title">Movie Title</string>
     <string name="release_date">Release Date</string>
     <string name="movie_description">Movie Description</string>
+    <string name="popular_movie">Popular Movies</string>
+    <string name="top_rated">Top Rated Movies</string>
+
+
 </resources>
