Added SQLite Insert and Delete for Favorites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,10 @@
     <string name="movie_description">Movie Description</string>
     <string name="popular_movie">Popular Movies</string>
     <string name="top_rated">Top Rated Movies</string>
+    <string name="favorites">Favorites</string>
     <string name="vote_average">10/10</string>
+    <string name="action_favorite">Add to Favorites</string>
+    <string name="action_unfavorite">Unfavorite</string>
 
 
 </resources>
