--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,10 @@
     <string name="vote_average">10/10</string>
     <string name="action_favorite">Add to Favorites</string>
     <string name="action_unfavorite">Unfavorite</string>
+    <string name="trailers">Trailers</string>
+    <string name="reviews">Reviews</string>
+    <string name="reviewer_name">Reviewer Name</string>
+
 
 
 </resources>
